# clang-tidy-example

./: .gitignore  CMakeLists.txt  REAMDE.md  clang-tidy-analyze.sh  clang-tidy-fix.sh
src/: main.cpp
